nog een klein foutje overzien

--- a/eindopdracht/doc/final_report.tex
+++ b/eindopdracht/doc/final_report.tex
@@ -469,8 +469,8 @@ A second thing is the calibration of the sensors, the robot is very addicted to 
 Because of our test-driven approach, we extended the DSL weekly with new functionality. Since the DSL for the small rover was very limited, there is a big difference between the DSL for the small rover and the DSL for the mars rover. The small rover had no distinction between the master and the slave, there was only a limited set of actions and since we were still working with the subsumption architecture, we had to incorporate priorities in the DSL.\\
 
 \textbf{How flexible and extendable is your solution? For instance, how easy is it to add sensors, actuators, to move them to another NXT brick, or to add new functionality?}\\
-The fact that we use a state machine is useful in different ways. It makes it easy to create a model of the state machines. To change the modules of the robot only the code generator has to be changed, that is positive, because the old instances of the robot could be used further. \\
-For our robot is it also very easy to add some new functions and modules. Our DSL is very structured and it is easy to add a new arrow with constraints and a new state with new actions in the instances. Also to add some new code is our code very good structured which makes it easy to add new functionality. \\
+The fact that we use a state machine is useful in different ways. It makes it easy to create a model of the state machines. To change hardware components of the robot only the code generator has to be changed, that is positive, because the old instances of the robot can be reused. \\
+For our robot is it also very easy to add some new functions. Our DSL is very structured and it is easy to add a new arrow with constraints and a new state with new actions in the instances. Also to add some new code is our code very good structured which makes it easy to add new functionality. \\
 The Bluetooth 'protocol' we made is also extendable. We worked with a integers to identify the different messages, so it is easy to add new messages in the DSL. \\
 The state machine approach was useful to structure the coding process, because we had to split every step of the robot in conditions for the arrow and actions which should be done when the conditions match. This made it also easy to split our tasks in basic stuff, condition stuff and action stuff. Also the way to solve a complex problem was in the way of thinking in which conditions are there and what should the robot do to reach the state we want. In the beginning we thought to big and to complex, but after the first few tests, we learned the advantages and it was easier to split the big problems in smaller ones which made it easier to solve it. \\
 
